# agent-mcp-gateway

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  M0_SUCCESS_REPORT.md  M1_SUCCESS_REPORT.md  QUICKSTART_CONFIG.md  README.md  VALIDATION_FRAMEWORK_SUMMARY.md  main.py  main_test.py  pyproject.toml  server.json  test_config.py  test_integration.py  test_watch_simple.py  test_watchdog.py  validate_config.py
.claude/agents/: mcp-developer.md  researcher.md
.github/workflows/: publish-mcp-registry.yml  publish-pypi.yml  release-github.yml
config/: .mcp-gateway-rules.json.example  .mcp.json.example  .mcp.test.json  README.md  gateway-rules.json.example  mcp-servers.json.example
docs/: VALIDATION_FRAMEWORK_SUMMARY.md  claude-code-subagent-mcp-limitations.md  downstream-mcp-oauth-proxying.md  fastmcp-implementation-guide.md  mcp-registry-publishing.md  oauth-user-guide.md  policy-rules-specification.md  pypi-readme-transformation.md  quickstart-config.md  release-process.md  security-guide.md  validation-framework-usage.md
docs/insights/: cc-system-prompt-mcp-tools.md  cc-system-prompt-tools-sample.json
docs/milestones/: m0-success-report.md  m1-success-report.md
docs/specs/: M0-Foundation.md  M1-Core.md  M2-Production.md  M3-DX.md  PRD.md  m0-foundation.md  m1-core.md  m1-oauth.md  m1-policy-engine-fix.md  m3-dx.md
examples/: config_watcher_demo.py  policy_reload_demo.py
src/: CONFIG_README.md  __init__.py  audit.py  config.py  config_watcher.py  gateway.py  main.py  metrics.py  middleware.py  policy.py  proxy.py
src/config/: .mcp-gateway-rules.json.example  .mcp.json.example
tests/: __init__.py  demo_validation.py  test_audit.py  test_config.py  test_config_watcher.py  test_gateway_tools.py  test_get_server_tools.py  test_graceful_shutdown.py  test_hot_reload_e2e.py  test_integration_m1.py  test_integration_reload.py  test_metrics.py  test_middleware.py  test_oauth_integration.py  test_policy.py  test_proxy.py  test_proxy_oauth.py  test_reload_get_server_tools.py  test_validation_and_reload.py
